--- a/public/css/admin/add.css
+++ b/public/css/admin/add.css
@@ -1,23 +1,17 @@
-.main-content {
-    padding-bottom: 100px;
-}
-
 .container {
-    margin: 40px auto;
     justify-content: center;
     align-content: center;
-    border-radius: 10px;
     height: auto;
-    width: 1000px;
+    width: 100vw;
     background-color: aliceblue;
     border-radius: 8px;
-    overflow: hidden;
     box-shadow: 0 4px 8px rgba(0,0,0,0.1);
 }
 
 .container-header {
+    width: 100%;
     background-color: #a10d25;
-    padding: 20px 100px;
+    padding: 20px 200px;
     display: flex;
     color: rgb(245, 225, 225);
     justify-content: space-between;
@@ -25,27 +19,52 @@
 
 .container-content {
     background-color: #faf9ea;
-    padding: 40px 100px;
+    padding: 40px 200px;
+    height: 100vh;
 }
 
 .container-content form {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
+    display: grid;
+    grid-template-columns: 150px 1fr; 
+    gap: 20px 15px; 
+    align-items: center;
     max-width: 700px;
 }
 
 .form-group {
-    display: grid;
-    grid-template-columns: 150px 1fr;
-    align-items: start;
-    gap: 15px;
-    width: 100%;
+    display: contents; 
 }
 
 .container-content label {
     font-weight: bold;
     color: #333;
+}
+
+.container-content input,
+.container-content select {
+    padding: 10px 12px;
+    border-radius: 6px;
+    border: 1px solid #ccc;
+    font-size: 14px;
+    width: 700px;
+    transition: border 0.3s;
+}
+
+.submit-btn {
+    background-color: #ca122f;
+    color: white;
+}
+
+.cancel-btn {
+    padding: 10px 12px;
+    border-radius: 6px;
+    border: 1px solid #ccc;
+    font-size: 14px;
+    width: 150px;
+    color: white;
+    background-color: black;
+    text-decoration: none;
+    padding-left: 50px;
 }
 
 .gender-group {
@@ -113,21 +132,4 @@
 .gender-group .hint {
     font-size: 12px;
     color: #666;
-}
-
-.submit-btn {
-    background-color: #ca122f;
-    color: white;
-}
-
-.cancel-btn {
-    padding: 10px 12px;
-    border-radius: 6px;
-    border: 1px solid #ccc;
-    font-size: 14px;
-    width: 150px;
-    color: white;
-    background-color: black;
-    text-decoration: none;
-    padding-left: 50px;
 }
