--- a/public/css/admin/edit.css
+++ b/public/css/admin/edit.css
@@ -1,23 +1,17 @@
-.main-content {
-    padding-bottom: 100px;
-}
-
 .container {
-    margin: 40px auto;
     justify-content: center;
     align-content: center;
-    border-radius: 10px;
     height: auto;
-    width: 1000px;
+    width: 100vw;
     background-color: aliceblue;
     border-radius: 8px;
-    overflow: hidden;
     box-shadow: 0 4px 8px rgba(0,0,0,0.1);
 }
 
 .container-header {
+    width: 100%;
     background-color: #a10d25;
-    padding: 20px 100px;
+    padding: 20px 200px;
     display: flex;
     color: rgb(245, 225, 225);
     justify-content: space-between;
@@ -25,7 +19,8 @@
 
 .container-content {
     background-color: #faf9ea;
-    padding: 40px 100px;
+    padding: 40px 200px;
+    height: 100vh;
 }
 
 .container-content form {
@@ -43,6 +38,37 @@
 .container-content label {
     font-weight: bold;
     color: #333;
+}
+
+.container-content input,
+.container-content select {
+    padding: 10px 12px;
+    border-radius: 6px;
+    border: 1px solid #ccc;
+    font-size: 14px;
+    width: 700px;
+    transition: border 0.3s;
+}
+
+.submit-btn {
+    background-color: #ca122f;
+    color: white;
+}
+
+.cancel-btn {
+    padding: 10px 12px;
+    border-radius: 6px;
+    border: 1px solid #ccc;
+    font-size: 14px;
+    width: 150px;
+    color: white;
+    background-color: black;
+    text-decoration: none;
+    padding-left: 50px;
+}
+
+.gender-group {
+    display: flex;
 }
 
 .container-content input,
@@ -106,21 +132,4 @@
 .gender-group .hint {
     font-size: 12px;
     color: #666;
-}
-
-.submit-btn {
-    background-color: #ca122f;
-    color: white;
-}
-
-.cancel-btn {
-    padding: 10px 12px;
-    border-radius: 6px;
-    border: 1px solid #ccc;
-    font-size: 14px;
-    width: 150px;
-    color: white;
-    background-color: black;
-    text-decoration: none;
-    padding-left: 50px;
 }
