--- a/public/css/staff/index.css
+++ b/public/css/staff/index.css
@@ -58,7 +58,7 @@
 }
 
 table {
-    min-width: 1000px;
+    width: 100%;
     border-collapse: collapse;
     background: #faf9ea;
     table-layout: fixed;
@@ -69,7 +69,6 @@ td {
     padding: 12px 16px;
     text-align: left;
     border-bottom: 1px solid #ddd;
-    max-width: auto;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
