--- a/public/css/layouts/staff/sidebar.staff.css
+++ b/public/css/layouts/staff/sidebar.staff.css
@@ -7,8 +7,8 @@
 /* Sidebar */
 .sidebar {
     width: 220px;
-    background: #ca122f;
-    color: #fff;
+    background: #E8ECF0;
+    color: black;
     padding: 20px;
 }
 
