--- a/public/css/layouts/staff/sidebar.staff.css
+++ b/public/css/layouts/staff/sidebar.staff.css
@@ -7,8 +7,8 @@
 /* Sidebar */
 .sidebar {
     width: 220px;
-    background: #E8ECF0;
-    color: black;
+    background: #00855BF2;
+    color: #fff;
     padding: 20px;
 }
 
@@ -51,4 +51,13 @@
     display: flex;
     flex-direction: column;
     gap: 1px;
+}
+
+.menu-sidebar{
+    display: flex;
+    margin-top: 10px;
+}
+
+.menu-sidebar i{
+    margin-right: 15px;
 }
