--- a/public/css/layouts/pagination.css
+++ b/public/css/layouts/pagination.css
@@ -11,7 +11,7 @@
     padding: 8px 12px;
     border-radius: 6px;
     border: 1px solid #ddd;
-    background: #ca122f;
+    background-color: #14AE5C;
     color: #faf9ea;
     text-decoration: none;
     transition: all 0.2s ease-in-out;
