--- a/public/css/rule.css
+++ b/public/css/rule.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+
 html,
 body {
   height: 100%;
@@ -18,7 +20,7 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: sans-serif;
+  font-family: "Open Sans", sans-serif;
   text-decoration: none;
 }
 
