--- a/public/css/staff/dashboard.css
+++ b/public/css/staff/dashboard.css
@@ -7,7 +7,7 @@
   display: flex;
   justify-content: space-between;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 }
 
 .dashboard-title{
@@ -19,7 +19,7 @@
 .dashboard-title .header-line{
   width: 5px;
   height: 40px;
-  background-color: #148E6A;
+  background-color: #00A6FF;
 }
 
 /* Dashboard Layout */
@@ -30,20 +30,28 @@
 }
 
 .dashboard-grid {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
   gap: 24px;
 }
 
 /* Card Base Styles */
+.card{
+  width: 519px;
+  height: 280px;
+  border-radius: 12px;
+  background-color: #F7F9FA;
+  padding: 10px;
+}
+
 .card-header{
   display: flex;
-  align-items: center;
   justify-content: space-between;
 }
 
 .card-header i{
-  color: #1BB865;
+  color: #00A6FF;
 }
 
 .profile-details{
@@ -69,40 +77,77 @@
 }
 
 .profile-details .role{
-  background-color: #1BB865;
+  background-color: #0066FFB2;
   width: fit-content;
   border-radius: 10px;
   padding: 2px 10px;
   color: #fff;
 }
 
-/* Management Links */
-.management-links {
-  display: flex;
-  flex-direction: column;
-  gap: 12px;
+/*system overview */
+.system-overview h3{
+  padding-bottom: 10px;
 }
 
-.manage-link {
+.container-box{
   display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  justify-content: center;
+}
+
+.system-overview .box{
+  width: 220px;
+  height: 100px;
+  border-radius: 10px;
+  padding: 10px 19px;
+  line-height: 1.6;
+  color: #fff;
+}
+
+.criteria-box{
+  background-color: #1BB865AD;
+}
+
+.user-box{
+  background-color: #5F5BDB;
+}
+
+.evidence-box{
+  background-color: #63800e6b;
+}
+
+.milestone-box{
+  background-color: #4B138C66;
+}
+
+.system-overview .box img{
+  width: 25px;
+  height: 25px;
+}
+
+.management{
+  height: max-content;
+}
+
+.management h3{
+  padding-bottom: 10px;
+}
+
+.list{
+  height: 40px;
+  background-color: #D9D9D933;
+  border-radius: 10px;
   align-items: center;
-  gap: 12px;
-  padding: 16px;
-  background: #ca122f;
-  border-radius: 8px;
-  text-decoration: none;
-  color: white;
-  transition: all 0.2s ease;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 20px;
+  padding: 0 10px;
 }
 
-.manage-link:hover {
-  background: #9d0202;
-  transform: translateY(-1px);
-}
-
-.manage-link i {
-  font-size: 20px;
-  color: black;
+.add-list{
+  background-color: #0066FFB2;
+  color: #fff;
 }
 
 /* Chart Section */
