--- a/public/css/staff/dashboard.css
+++ b/public/css/staff/dashboard.css
@@ -1,5 +1,5 @@
 .main-content {
-  padding: 20px;
+  padding: 15px 100px;
 }
 
 .dashboard-header {
@@ -32,17 +32,18 @@
 .dashboard-grid {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: space-between;
+  padding: 0 125px;
   gap: 24px;
 }
 
 /* Card Base Styles */
-.card{
+.card {
   width: 519px;
   height: 280px;
-  border-radius: 12px;
+  border-radius: 8px;
   background-color: #F7F9FA;
-  padding: 10px;
+  padding: 20px 40px;
 }
 
 .card-header{
@@ -79,7 +80,7 @@
 .profile-details .role{
   background-color: #0066FFB2;
   width: fit-content;
-  border-radius: 10px;
+  border-radius: 8px;
   padding: 2px 10px;
   color: #fff;
 }
@@ -92,17 +93,19 @@
 .container-box{
   display: flex;
   flex-wrap: wrap;
-  gap: 20px;
+  column-gap: 20px;
+  row-gap: 20px;
   justify-content: center;
 }
 
 .system-overview .box{
-  width: 220px;
-  height: 100px;
-  border-radius: 10px;
-  padding: 10px 19px;
+  width: 205px;
+  height: 90px;
+  border-radius: 8px;
+  padding: 5px 19px;
   line-height: 1.6;
   color: #fff;
+  font-size: 14px;
 }
 
 .criteria-box{
@@ -137,7 +140,7 @@
 .list{
   height: 40px;
   background-color: #D9D9D933;
-  border-radius: 10px;
+  border-radius: 8px;
   align-items: center;
   display: flex;
   justify-content: space-between;
