--- a/public/css/staff/dashboard.css
+++ b/public/css/staff/dashboard.css
@@ -43,6 +43,7 @@
   border-radius: 12px;
   background-color: #F7F9FA;
   padding: 10px;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
 }
 
 .card-header{
@@ -151,6 +152,11 @@
 }
 
 /* Chart Section */
+.chart-card{
+  width: max-content;
+  height: max-content;
+}
+
 .chart-card .chart-body {
   height: 400px;
   padding: 20px;
